added new patters to structure, adapted order of patterns

--- a/config/structure.yaml
+++ b/config/structure.yaml
@@ -60,17 +60,23 @@ parts:
         parts:   
           - id: clarify-and-develop-domains
             tags: [pattern]
-          - id: delegate-influence
+          - id: manage-the-whole-system
+            tags: [pattern]
+          - id: enable-autonomy
+            tags: [pattern]
+          - id: collaborate-on-dependencies
             tags: [pattern]
           - id: clarify-and-develop-strategy
             tags: [pattern]
+          - id: design-adaptable-systems
+            tags: [pattern]
           - id: align-flow
+            tags: [pattern]
+          - id: open-systems
             tags: [pattern]
           - id: create-a-pull-system-for-organizational-change
             tags: [pattern]
           - id: driver-mapping
-            tags: [pattern]
-          - id: open-systems
             tags: [pattern]
       - id: peer-development
         tags: [group]
@@ -94,11 +100,15 @@ parts:
             tags: [pattern]
           - id: involve-those-affected
             tags: [pattern]
+          - id: invest-in-ongoing-learning
+            tags: [pattern]
           - id: breaking-agreements
             tags: [pattern]
-          - id: transparent-salary
+          - id: financial-transparency
             tags: [pattern]
-          - id: contract-for-successful-collaboration
+          - id: share-costs-and-gains
+            tags: [pattern]
+          - id: open-salary
             tags: [pattern]
           - id: support-role
             tags: [pattern]
@@ -116,6 +126,10 @@ parts:
           - id: double-linking
             tags: [pattern]
           - id: representative
+            tags: [pattern]
+          - id: delegate-circle
+            tags: [pattern]
+          - id: service-circle
             tags: [pattern]
           - id: open-team
             tags: [pattern]
@@ -137,6 +151,8 @@ parts:
       - id: defining-agreements
         tags: [group]
         parts:
+          - id: contract-for-successful-collaboration
+            tags: [pattern]          
           - id: record-agreements
             tags: [pattern]
           - id: clarify-intended-outcome
@@ -190,6 +206,8 @@ parts:
             tags: [pattern]
           - id: visualize-work
             tags: [pattern]
+          - id: deliver-value-incrementally
+            tags: [pattern]
           - id: pull-system-for-work
             tags: [pattern]
           - id: limit-work-in-progress
@@ -198,44 +216,36 @@ parts:
             tags: [pattern]
           - id: coordinator
             tags: [pattern]
-      - id: organizational-structure
-        tags: [group]
+  - id: organizational-structure
+    parts:
+      - id: examples-of-larger-structures
         parts:
-          - id: delegate-circle
-            tags: [pattern]
-          - id: service-circle
-            tags: [pattern]
-          - id: peach-organization
-            tags: [pattern]
-          - id: double-linked-hierarchy
-            tags: [pattern]
-          - id: service-organization
-            tags: [pattern]
-          - id: fractal-organization
-            tags: [pattern]
-
+          - peach-organization
+          - double-linked-hierarchy
+          - service-organization
+          - fractal-organization
   - id: csf
     parts:
       - thrive
       - ten-principles
       - id: orientation
         parts:
-          - clarify-purpose
-          - develop-strategy
+          - principle-1-clarify-purpose
+          - principle-2-develop-strategy
       - id: navigation
         parts:
-          - focus-on-value
-          - sense-respond
-          - run-experiments
+          - principle-3-focus-on-value
+          - principle-4-sense-respond
+          - principle-5-run-experiments
       - id: structure
         parts:
-          - enable-autonomy
-          - collaborate-on-dependencies
+          - principle-6-enable-autonomy
+          - principle-7-collaborate-on-dependencies
       - id: transformation
         parts:
-          - invest-in-learning
-          - develop-culture
-          - shared-mental-models
+          - principle-8-invest-in-learning
+          - principle-9-develop-culture
+          - principle-10-shared-mental-models
       - where-to-start
   - id: appendix
     parts:
