--- a/templates/website/_config.yml
+++ b/templates/website/_config.yml
@@ -22,6 +22,15 @@ includes_dir: ./_includes
 markdown: kramdown
 safe: true # required on Github pages (no plugins)
 
+kramdown:
+  toc_levels: 2..4
+
+# plugins:
+#   - jekyll-redirect-from
+
+# whitelist:
+#   - jekyll-redirect-from
+
 defaults:
   -
     scope:
