replaced more dashes

--- a/content/glossary.yaml
+++ b/content/glossary.yaml
@@ -206,8 +206,8 @@ terms:
     glossary: The autonomy of people to decide for themselves how to create value, limited by the constraints of their domain, and by objections brought by the delegator, representatives, or others.
   social-technology:
     name: Social Technology
-    definition: "**Social technology** is any process, technique, method, skill or any other approach that people can use to influence social systems — organizations, societies, communities etc. — to support achieving shared objectives and guide meaningful interaction and exchange."
-    glossary: Any process, technique, method, skill or any other approach that people can use to influence social systems — organizations, societies, communities etc. — to support achieving shared objectives and guide meaningful interaction and exchange.
+    definition: "**Social technology** is any process, technique, method, skill or any other approach that people can use to influence social systems – organizations, societies, communities etc. – to support achieving shared objectives and guide meaningful interaction and exchange."
+    glossary: Any process, technique, method, skill or any other approach that people can use to influence social systems – organizations, societies, communities etc. – to support achieving shared objectives and guide meaningful interaction and exchange.
   sociocracy:
     name: Sociocracy
     glossary: An approach for organizing together where people affected by decisions can influence them on the basis of reasons to do so.
@@ -261,5 +261,5 @@ terms:
     glossary: "Valued principles that guide behavior. Not to be confused with \"value\" (singular) in the context of a driver."
   waste:
     name: Waste
-    definition: "**Waste** is anything unnecessary for — or standing in the way of — a (more) effective response to a driver."
-    glossary: Anything unnecessary for — or standing in the way of — a (more) effective response to a driver.
+    definition: "**Waste** is anything unnecessary for – or standing in the way of – a (more) effective response to a driver."
+    glossary: Anything unnecessary for – or standing in the way of – a (more) effective response to a driver.
