--- a/content/glossary.yaml
+++ b/content/glossary.yaml
@@ -136,7 +136,7 @@ terms:
   objective:
     name: Objective
     definition:
-    glossary: A (specific) result that a person or team or organization wants to achieve; an aim or a goal.
+    glossary: A (specific) result or goal that a person, team or organization wants to achieve. In the context of S3, objectives refer to achieving intended outcomes, fulfilling requirements, and ultimately, responding adequately to organizational drivers.
   open-team:
     name: Open Team
     definition: An **open team** is a group of people who are invited to contribute to the work and governance done in a domain when they can.
@@ -152,7 +152,7 @@ terms:
   organization:
     name: Organization
     definition:
-    glossary: A group of people collaborating toward a shared driver (or objective). Often an organization subdivides into several teams.
+    glossary: A group of people collaborating toward a common purpose. Often an organization subdivides into several teams.
   organizational-driver:
     name: Organizational Driver
     definition: An **organizational driver** is any situation where the organization's members have a motive to respond because they anticipate that doing so would be beneficial for the organization (by helping to generate value, eliminate waste or avoid undesirable risks or consequences).
