added definition of intended outcome to glossary

--- a/content/glossary.yaml
+++ b/content/glossary.yaml
@@ -112,7 +112,7 @@ terms:
     glossary: A visible, prioritized list of items (drivers and/or requirements) relating to the governance of a domain.
   intended-outcome:
     name: Intended Outcome
-    definition: 
+    definition: The **intended outcome** is the expected result of an agreement, action, project or strategy.
     glossary: The expected result of an agreement, action, project or strategy.
   helping-team:
     name: Helping Team
