--- a/content/glossary.yaml
+++ b/content/glossary.yaml
@@ -17,10 +17,6 @@ terms:
   account:
     name: Attend to (v.)
     glossary: to take responsibility for something.
-  agreement:
-    name: Agreement
-    definition: An **agreement** is an agreed-upon guideline, process, protocol or policy designed to guide the flow of value.
-    glossary: An agreed-upon guideline, process, protocol or policy designed to guide the flow of value.
   alignment:
     name: Alignment
     glossary: The process of bringing the actions of all parts of an organization in line with the organization's objectives.
@@ -106,6 +102,10 @@ terms:
     name: Governance
     definition: "**Governance** in an organization (or a domain within it) is the process of setting objectives and making and evolving decisions that guide people toward achieving those objectives."
     glossary: The process of setting objectives and making and evolving decisions that guide people toward achieving those objectives.
+  governance-agreement:
+    name: Agreement
+    definition: A **governance agreement** is an agreed-upon guideline, process, policy, protocol, plan or strategy designed to guide future decisions and actions within a domain.
+    glossary: An agreed-upon guideline, process, policy, protocol, plan or strategy designed to guide future decisions and actions within a domain.
   governance-backlog:
     name: Governance Backlog
     definition: A **governance backlog** is a visible, prioritized list of items relating to the governance of a domain.
