updated description of governance, and definition of governance

--- a/content/glossary.yaml
+++ b/content/glossary.yaml
@@ -100,7 +100,7 @@ terms:
     glossary: Deliverables traveling through an organization towards customers or other stakeholders.
   governance:
     name: Governance
-    definition: "**Governance** in an organization (or a domain within it) is the process of setting objectives and making and evolving decisions that guide people toward achieving those objectives."
+    definition: "**Governance** of, or within an organization (or a domain within it), is the process of setting objectives and making and evolving decisions that guide people toward achieving those objectives."
     glossary: The process of setting objectives and making and evolving decisions that guide people toward achieving those objectives.
   governance-agreement:
     name: Agreement
